tests/ui/compile-fail/pin_data/unexpected_item.stderr
error: `#[pin_data]` can only be applied to struct, enum and union defintions
 --> tests/ui/compile-fail/pin_data/unexpected_item.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
